Bug 760880 - decomtaminate Is Column / Row / Cell Selected(), r=tbsaunde